# persistent-migration

./: .gitignore  CHANGELOG.md  DEVELOPER.md  LICENSE.md  README.md  package.yaml  persistent-migration.cabal  stack.yaml
.circleci/: config.yml
scripts/: hlint.sh  install-stack-deps.sh  install-system-deps.sh  setup.sh  stylish-haskell.sh
src/Database/Persist/: Migration.hs
src/Database/Persist/Migration/: Backend.hs  Core.hs  Internal.hs  Operation.hs  Plan.hs  Postgres.hs  Sql.hs  Sqlite.hs
src/Database/Persist/Migration/Operation/: Class.hs  Types.hs
src/Database/Persist/Migration/Utils/: Data.hs  Plan.hs  Sql.hs
test/: Integration.hs  Main.hs  Unit.hs
test/Database/Persist/: MigrationTest.hs  TestBackends.hs  TestUtils.hs
test/Test/Integration/: Backends.hs  Migration.hs  Property.hs
test/Test/Integration/Utils/: Backends.hs  RunSql.hs
test/Test/Unit/: Backends.hs  Migration.hs  Property.hs  Validation.hs
test/Test/Unit/Utils/: Backends.hs
test/Test/Utils/: Goldens.hs  QuickCheck.hs
test/goldens-integration/postgresql/: migrate-from-0.txt  migrate-from-2.txt  migrate-from-sex-to-gender.txt  migrations-are-idempotent.txt
test/goldens-unit/postgresql/: basic-migration.txt  duplicate-columnprops-in-createtable.txt  duplicate-constraints-in-createtable.txt  migration-with-shorter-path.txt  non-null-addcolumn-without-default.txt  partial-migration-avoids-shorter-path.txt  partial-migration.txt
test/goldens-unit/validation/: constraint-references-non-existent-column.txt  invalid-decreasing-migration.txt  invalid-duplicate-operation-paths.txt  valid-re-ordered-migration.txt
test/goldens/postgresql/: basic-migration.txt  duplicate-columnprops-in-addcolumn.txt  partial-migration.txt
test/integration/: Main.hs  Migration.hs  Property.hs
test/integration/Utils/: Backends.hs  RunSql.hs
test/unit/: Main.hs  Migration.hs  Property.hs
test/unit/Utils/: Backends.hs
test/utils/Utils/: Goldens.hs  QuickCheck.hs
