name:                persistent-migration
version:             0.0.1
license:             BSD3
license-file:        LICENSE.md
author:              Brandon Chinn <brandonchinn178@gmail.com>
maintainer:          Brandon Chinn <brandonchinn178@gmail.com>
category:            Database
synopsis:            Manual migrations for the persistent library
description:         Manual migrations for the persistent library.
build-type:          Simple
cabal-version:       1.18
extra-doc-files:     CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/brandonchinn178/persistent-migration.git

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:    Database.Persist.Migration
                      Database.Persist.Migration.Sqlite
  other-modules:      Database.Persist.Migration.Internal
  build-depends:      base >= 4.7 && < 5
                    , persistent
                    , text
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Wredundant-constraints -Wnoncanonical-monad-instances

test-suite persistent-migration-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  default-language:   Haskell2010
  main-is:            Main.hs
  other-modules:      Database.Persist.MigrationTest
                      Database.Persist.TestUtils
  build-depends: base
               , hspec-expectations
               , mtl
               , persistent
               , persistent-migration
               , tasty
               , tasty-discover
               , tasty-hunit
               , text
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Wredundant-constraints -Wnoncanonical-monad-instances
