name:                persistent-migration
version:             0.0.1
license:             BSD3
license-file:        LICENSE.md
author:              Brandon Chinn <brandonchinn178@gmail.com>
maintainer:          Brandon Chinn <brandonchinn178@gmail.com>
category:            Database
synopsis:            Manual migrations for the persistent library
description:         Manual migrations for the persistent library.
build-type:          Simple
cabal-version:       1.18
extra-doc-files:     CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/brandonchinn178/persistent-migration.git

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:    Database.Persist.Migration
                      Database.Persist.Migration.Postgres
                      Database.Persist.Migration.Sql
  other-modules:      Database.Persist.Migration.Internal
                      Database.Persist.Migration.Plan
  build-depends:      base >= 4.7 && < 5
                    , containers
                    , fgl
                    , persistent
                    , mtl
                    , text
                    , time
                    , unordered-containers
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Wredundant-constraints -Wnoncanonical-monad-instances

test-suite persistent-migration-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  default-language:   Haskell2010
  main-is:            Unit.hs
  other-modules:      Test.Unit.Migration
                      Test.Unit.Backends
                      Test.Utils.Goldens
  build-depends: base
               , bytestring
               , conduit
               , containers
               , mtl
               , persistent
               , persistent-migration
               , tasty
               , tasty-golden
               , text
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Wredundant-constraints -Wnoncanonical-monad-instances

test-suite persistent-migration-integration
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  default-language:   Haskell2010
  main-is:            Integration.hs
  other-modules:      Test.Integration.Backends
                      Test.Integration.Migration
                      Test.Integration.Utils.RunSql
                      Test.Utils.Goldens
  build-depends: base
               , bytestring
               , monad-logger
               , mtl
               , process
               , persistent
               , persistent-migration
               , persistent-postgresql
               , persistent-template
               , resource-pool
               , tasty
               , tasty-golden
               , temporary
               , text
               , yaml
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Wredundant-constraints -Wnoncanonical-monad-instances
