name:                persistent-migration
version:             0.0.2
license:             BSD3
license-file:        LICENSE.md
author:              Brandon Chinn <brandonchinn178@gmail.com>
maintainer:          Brandon Chinn <brandonchinn178@gmail.com>
category:            Database
synopsis:            Manual migrations for the persistent library
description:         Manual migrations for the persistent library.
build-type:          Simple
cabal-version:       1.18
extra-doc-files:     CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/brandonchinn178/persistent-migration.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:    Database.Persist.Migration
                      Database.Persist.Migration.Internal
                      Database.Persist.Migration.Postgres
                      Database.Persist.Migration.Utils.Data
                      Database.Persist.Migration.Utils.Plan
                      Database.Persist.Migration.Utils.Sql
  build-depends:      base >= 4.7 && < 5
                    , containers
                    , fgl
                    , persistent
                    , mtl
                    , text
                    , time
                    , unordered-containers
  ghc-options: -Wall
  if flag(dev)
    ghc-options:      -Werror
  if flag(dev) && impl(ghc >= 8.0)
    ghc-options:      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wnoncanonical-monad-instances
                      -Wnoncanonical-monadfail-instances


test-suite persistent-migration-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  default-language:   Haskell2010
  main-is:            Unit.hs
  other-modules:      Test.Unit.Migration
                      Test.Unit.Property
                      Test.Unit.Utils.Backends
                      Test.Utils.Goldens
                      Test.Utils.QuickCheck
  build-depends: base
               , bytestring
               , conduit
               , containers
               , mtl
               , persistent
               , persistent-migration
               , QuickCheck
               , tasty
               , tasty-golden
               , tasty-quickcheck
               , text
  ghc-options: -Wall
  if flag(dev)
    ghc-options:      -Werror
  if flag(dev) && impl(ghc >= 8.0)
    ghc-options:      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wnoncanonical-monad-instances
                      -Wnoncanonical-monadfail-instances

test-suite persistent-migration-integration
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  default-language:   Haskell2010
  main-is:            Integration.hs
  other-modules:      Test.Integration.Migration
                      Test.Integration.Property
                      Test.Integration.Utils.Backends
                      Test.Integration.Utils.RunSql
                      Test.Utils.Goldens
                      Test.Utils.QuickCheck
  build-depends: base
               , bytestring
               , exceptions
               , monad-logger
               , mtl
               , process
               , persistent
               , persistent-migration
               , persistent-postgresql
               , persistent-template
               , resource-pool
               , QuickCheck
               , tasty
               , tasty-golden
               , tasty-quickcheck
               , temporary
               , text
               , yaml
  ghc-options: -Wall
  if flag(dev)
    ghc-options:      -Werror
  if flag(dev) && impl(ghc >= 8.0)
    ghc-options:      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wnoncanonical-monad-instances
                      -Wnoncanonical-monadfail-instances
